--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/wertrain/webgl-metasequoia#readme",
   "dependencies": {
+    "gulp": "3.9.1",
     "gulp-webserver": "0.9.1"
   }
 }
